--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-thunk": "^2.1.0",
     "@types/styled-components": "^5.1.26",
     "axios": "^0.27.2",
+    "babel-preset-es2015": "^6.24.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
@@ -27,6 +29,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-scroll-to-top": "^3.0.0",
+    "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
